--- a/src/components/bpm-input/bpm-input.component.css
+++ b/src/components/bpm-input/bpm-input.component.css
@@ -1,30 +1,39 @@
 /*
   bpm-input
 */
+@import "../../styles/core/variables";
+
 .bpm {
   align-items: center;
-  border: 1px solid #fff;
+  border: 1px solid var(--orange);
   border-radius: 5px;
   cursor: pointer;
   display: flex;
   justify-content: center;
-  margin-left: -140px;
+  margin-left: -160px;
   margin-right: 20px;
   padding: 5px 20px 5px 5px;
 }
 
 .input,
+.value,
 .label {
   flex: auto;
+  position: relative;
+}
+
+.input,
+.value {
+  font-size: 20px;
+  width: 80px;
+}
+
+.value {
+  padding: 8px 15px;
 }
 
 .input {
-  font-size: 20px;
-  padding: 8px 15px;
-  text-align: center;
-  width: 60px;
+  padding: 3px 5px;
 }
 
-.label {
-
-}
+/* .label {} */
